# tui_adv

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cloud_server_only.sh  pyproject.toml
.github/workflows/: pages.yml  rust.yml
crates/escape-core/: Cargo.toml
crates/escape-terminal/: Cargo.toml
crates/escape-terminal/src/: main.rs
crates/escape-terminal/tests/: cli_smoke.rs
crates/escape-wasm/: Cargo.toml
crates/escape-wasm/src/: lib.rs
crates/escape-wasm/tests/: json_contract.rs
docs/: 00_Index.md  01_Game_Overview.md
idea_box/: BACKLOG_ORDER.md  IDEA_INTAKE_GUIDE.md  LLM_DESIGN_HANDOFF.md  README.md  combat_system.md  dream_ending_branch_ideas.md  general_corporate_storypacks.md  notion_sources.yml  real_escape_ending_branch_ideas.md  semiconductor_sw_storypacks.md  web_play_like_pokerogue.md
scripts/: export_web_data.py  qa_smoke.py  textual_qa_smoke.py
tests/: test_achievements.py  test_cli.py  test_cloud_server_helper.py  test_content_data.py  test_docs_contract.py  test_encounter_panel.py  test_encounters.py  test_endings.py  test_game_loop.py  test_game_state.py  test_items.py  test_locations.py  test_main.py  test_qa_smoke_script.py  test_save_load.py  test_secrets.py  test_status_panel.py  test_storypack_db.py  test_tui_app.py  test_web_audio_engine_contract.py  test_web_data_export.py  test_web_packaging_decision.py  test_web_player_deployment_contract.py  test_web_transition_controller_contract.py  test_web_visual_qa_contract.py  test_web_wasm_build_standardization.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+191 files in other folders)
