[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tui-adv"
version = "0.1.0"
description = "A terminal/company-system horror TUI choice-survival game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.85",
  "PyYAML>=6.0",
]

[project.scripts]
tui-adv = "tui_adv.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
