[package]
name = "escape-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "escape_wasm"
path = "src/lib.rs"

[dependencies]
escape-core = { path = "../escape-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
